--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "compression": "^1.5.2",
     "cors": "^2.7.1",
     "express": "^4.13.3",
+    "request": "^2.72.0",
     "resource-router-middleware": "^0.5.1"
   },
   "devDependencies": {
